Updates for olfs-1.18.8 release

--- a/install.html
+++ b/install.html
@@ -45,7 +45,7 @@ Updated for Hyrax version 1.16.x
   <p>
     <a href="http://docs.opendap.org/index.php/Hyrax_GitHub_Source_Build">Build and install the bes and it's submodules.</a> <br>
     Launch the bes (you can use besctl to do that).  <br>
-    Make sure there s a beslistener process runnning. <br>
+    Make sure there is a beslistener process runnning. <br>
   </p>
 </blockquote>
 <h2><strong>Check out the OLFS:</strong>     </h2>
