Remote thredds datasets (#107)
* Incremental checkin for (still) bnroken remote thredds dataset access.

* Formatting

* path adjustmens for landing page

* Fixed ngap lander

Co-authored-by: The-Robot-Travis <npotter@opendap.org>

--- a/resources/ngap/landing/ngap.html
+++ b/resources/ngap/landing/ngap.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Added localized path prefix of /docs/ngap to external local resources (ndp - 03/09/21) -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -29,7 +28,16 @@
     <div class="hero-callout" style="background-color: #2276ac;">
         <div class="container-lg">
             <div class="row pt-5">
-                <h1 class="text-center text-light display-4">Hyrax provides direct access to subsetting of NASA data using Python and analysis tools like Panolpy and Matlab</h1>
+                <h1 class="text-center text-light display-5">Hyrax provides direct access to subsetting of NASA data using Python or your favorite analysis tool</h1>
+            </div>
+            <div class="row pt-4 justify-content-center">
+              <ul class="list-inline text-center">
+                <li class="list-inline-item h5 text-white-50">Panoply</li>
+                <li class="list-inline-item h5 text-white-50">Matlab</li>
+                <li class="list-inline-item h5 text-white-50">R</li>
+                <li class="list-inline-item h5 text-white-50">ArcGIS Pro</li>
+                <li class="list-inline-item h5 text-white-50">Jupyer Notebook</li>
+              </ul>
             </div>
             <div class="row pt-4 justify-content-center cta">
                 <div class="col-md-6 text-center"><a class="btn btn-lg btn-success" href="https://opendap.github.io/hyrax_guide/Master_Hyrax_Guide.html" role="button">Hyrax Installation and Configuration Guide</a></div>
@@ -81,8 +89,8 @@
                 <p>The Panoply application is a sophisticated GUI driven data client that is based around the CDM/NetCDF data model and utilizes that NetCDF-Java (and thus the Java DAP implementation) to access remote DAP datasets. Because it has a GUI it can retrieve (and cache for later) users credentials directly from the user.</p>
               </div>
               <div class="col-md-5">
-                <img class="img-fluid" alt="/docs/ngap/panoply-1" src="/docs/ngap/panoply-1.png" />
-                <img class="img-fluid" alt="/docs/ngap/panoply-2" src="/docs/ngap/panoply-2.png" />
+                <img class="img-fluid" alt="panoply-1" src="/docs/ngap/panoply-1.png" />
+                <img class="img-fluid" alt="panoply-2" src="/docs/ngap/panoply-2.png" />
               </div>
             </div>
         </div>
