Changed link/title to home page
The nasa meatball works as a sort of "home" button. So clicking on it should send the user back to the landing page.

--- a/resources/ngap/landing/ngap.html
+++ b/resources/ngap/landing/ngap.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-lg">
-            <a class="navbar-brand nasa" href="https://earthdata.nasa.gov">EARTHDATA</a>
+            <a class="navbar-brand nasa" href="https://opendap.earthdata.nasa.gov">OPeNDAP</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
