Changed the link on the main page to the Quickstart guide
For now it is set to the Quickstart guide, it should be updated to the tutorial videos/page.

--- a/resources/ngap/landing/ngap.html
+++ b/resources/ngap/landing/ngap.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-lg">
-            <a class="navbar-brand nasa" href="https://opendap.earthdata.nasa.gov">OPeNDAP</a>
+            <a class="navbar-brand nasa" href="https://opendap.earthdata.nasa.gov">OPeNDAP in the Cloud</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,7 +40,7 @@
               </ul>
             </div>
             <div class="row pt-4 justify-content-center cta">
-                <div class="col-md-6 text-center"><a class="btn btn-lg btn-success" href="https://opendap.github.io/hyrax_guide/Master_Hyrax_Guide.html" role="button">Hyrax Installation and Configuration Guide</a></div>
+                <div class="col-md-6 text-center"><a class="btn btn-lg btn-success" href="https://opendap.github.io/documentation/QuickStart.html" role="button">Quickstart to OPeNDAP</a></div>
             </div>
             <div class="row pt-3 pb-4 text-center">
               <p><span class="badge bg-dark">Python</span> <span class="badge bg-dark">Java</span> <span class="badge bg-dark">C/C++</span></p>
