--- a/resources/ngap/landing/ngap.html
+++ b/resources/ngap/landing/ngap.html
@@ -104,6 +104,7 @@
                         <li class="list-inline-item"><a style="color: #fff" href="http://www.nasa.gov/FOIA/index.html">FOIA</a></li>
                         <li class="list-inline-item"><a style="color: #fff" href="http://www.nasa.gov/about/highlights/HP_Privacy.html">NASA Privacy Policy</a></li>
                         <li class="list-inline-item"><a style="color: #fff" href="http://www.usa.gov/">USA.gov</a></li>
+                        <li class="list-inline-item"><a href="#" onclick="javascript:feedback.showForm();">Feedback</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
@@ -111,6 +112,9 @@
                 </div>
             </div>
         </div>
-    </footer>  
+    </footer>
+    <script type="text/javascript" src="https://status.earthdata.nasa.gov/assets/banner_widget.js"></script>
+    <script type="text/javascript" src="https://fbm.earthdata.nasa.gov/for/Harmony/feedback.js"></script>
+    <script type="text/javascript">feedback.init({showIcon: false});</script>
 </body>
 </html>
