Updated CloudFront 504 page with Jame's input

--- a/resources/ngap/errors/ngap-504.html
+++ b/resources/ngap/errors/ngap-504.html
@@ -54,10 +54,11 @@
   </head>
   <body>
     <div class="wrap">
-      <h1>Hyrax has temporaily left the building...</h1>
-      <p>We are redeploying/updating the Hyrax service. Please check back in a few minutes. If the problem persists please contact <a href="mailto:support@opendap.org">support@opendap.org</a>.</p>
+      <h1>The OPeNDAP has temporaily left the building...</h1>
+      <p>We are redeploying/updating the Hyrax (OPeN)DAP service. Please check back in a few minutes.</p>
+      <p>If you continue to receive this message, please contact <a href="mailto:support@opendap.org">support@opendap.org</a>.</p>
       <!-- If you need an HTTP Error Code, uncomment this section -->
-      <!-- <div class="error-code"><h2>5<span>0</span>0</h2></div> -->
+      <!-- <div class="error-code"><h2>50</h2></div> --> 
       <div class="earth">
         <div class="orbit"></div>
       </div>
