Added link to our data access client tutorials to the NGAP landing page.

--- a/resources/ngap/landing/ngap.html
+++ b/resources/ngap/landing/ngap.html
@@ -88,7 +88,24 @@
                 </ol>
                 <p>The Panoply application is a sophisticated GUI driven data client that is based around the CDM/NetCDF data model and utilizes that NetCDF-Java (and thus the Java DAP implementation) to access remote DAP datasets. Because it has a GUI it can retrieve (and cache for later) users credentials directly from the user.</p>
               </div>
-              <div class="col-md-5">
+
+                <div class="col-md-5">
+                    <h3>
+                        <a href="https://opendap.github.io/documentation/tutorials/DataAccessTutorials.html">
+                            OPeNDAP Data Access Tutorials
+                        </a>
+                    </h3>
+                    <p>
+                        You can find a number of tutorials which explain how to
+                        utilize different data access clients to retrieve data from
+                        a DAP2 or DAP4 service on our
+                        <a href="https://opendap.github.io/documentation/tutorials/DataAccessTutorials.html">
+                            Data Access Tutorials
+                        </a>
+                        page.
+                    </p>
+                </div>
+                <div class="col-md-5">
                 <img class="img-fluid" alt="panoply-1" src="/docs/ngap/panoply-1.png" />
                 <img class="img-fluid" alt="panoply-2" src="/docs/ngap/panoply-2.png" />
               </div>
