Formatting landing page content.

--- a/resources/ngap/landing/ngap.html
+++ b/resources/ngap/landing/ngap.html
@@ -75,18 +75,27 @@
             </div>
         </div>
     </div>
+    <!-############### Tutorials Out-link ######################-->
     <div class="hero-callout" style="background-color: #e3e3e3;">
-        <h3>
-            <a href="https://opendap.github.io/documentation/tutorials/DataAccessTutorials.html">
-                OPeNDAP Data Access Tutorials
-            </a>
-        </h3>
-        You can find a number of tutorials which explain how to utilize different data access
-        clients to retrieve data from a DAP2 or DAP4 service on our
-        <a href="https://opendap.github.io/documentation/tutorials/DataAccessTutorials.html">
-            Data Access Tutorials
-        </a> page.
+        <div class="container-lg">
+            <div class="row pt-5 pb-4 justify-content-center">
+                <div class="col-md-5">
+                    <h3>
+                        <a href="https://opendap.github.io/documentation/tutorials/DataAccessTutorials.html">
+                            OPeNDAP Data Access Tutorials
+                        </a>
+                    </h3>
+                    You can find a number of tutorials which explain how to utilize different data access
+                    clients to retrieve data from a DAP2 or DAP4 service on our
+                    <a href="https://opendap.github.io/documentation/tutorials/DataAccessTutorials.html">
+                        Data Access Tutorials
+                    </a> page.
+                </div>
+            </div>
+        </div>
     </div>
+    <!-#########################################################-->
+
     <div class="hero-callout" style="background-color: #e3e3e3;">
         <div class="container-lg">
             <div class="row pt-5 pb-4 justify-content-center">
